# rectanglify

./: Cargo.toml
src/: lib.rs  main.rs  plugin.rs  rects.rs
