[package]
name = "rectanglify"
version = "0.1.0"
authors = ["Liam Murphy <liampm32@gmail.com>"]
repository = "https://github.com/Liamolucko/rectanglify"
license = "MIT"
edition = "2021"
description = "A GStreamer plugin that converts a video stream into a bunch of rectangles"

[dependencies]
gst = { version = "0.18.8", package = "gstreamer" }
gst-base = { version = "0.18.0", package = "gstreamer-base" }
gst-video = { version = "0.18.7", package = "gstreamer-video" }
gst-audio = { version = "0.18.7", package = "gstreamer-audio" }
num-traits = "0.2"
once_cell = "1.0"
image = "0.24.2"
anyhow = "1.0.58"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"

[features]
static = []
capi = []

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gstreamer-audio-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
